@@ -1,8 +1,7 @@
-use JSON::Fast::Hyper:ver<0.0.6>:auth<zef:lizmat>;
-use paths:ver<10.0.9>:auth<zef:lizmat>;
+use JSON::Fast::Hyper:ver<0.0.9+>:auth<zef:lizmat>;
+use paths:ver<10.1+>:auth<zef:lizmat>;
 use Rakudo::CORE::META:ver<0.0.9+>:auth<zef:lizmat>;
 use Identity::Utils:ver<0.0.11+>:auth<zef:lizmat>;
-
 
 # Locally stored JSON files are assumed to be correct
 my sub meta-from-io(IO::Path:D $io) { from-json $io.slurp, :immutable }
@@ -599,6 +598,11 @@ class Ecosystem::Archive::Update {
         @added
     }
 }
+
+# Set ^ver ^auth ^api correctly
+use META::verauthapi:ver<0.0.1+>:auth<zef:lizmat> $?DISTRIBUTION,
+  Ecosystem::Archive::Update
+;
 
 =begin pod
 
